<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtInstructions"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:layout_gravity="center_horizontal"
        android:layout_row="0"
        android:text="@string/txtInstructions"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtYahoo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/strYahoo"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/txtUcsdExt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/txtUcsdExt"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <Button
        android:id="@+id/btnUcsd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_row="2"
        android:onClick="clickBtn_UCSD"
        android:text="@string/btnStr_UCSD" />

    <Button
        android:id="@+id/btnYahoo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_row="1"
        android:onClick="clickBtn_Yahoo"
        android:text="@string/btnStr_Yahoo" />

</GridLayout>